@@ -31,8 +31,7 @@ import org.apache.hadoop.classification.InterfaceStability;
 import org.apache.hadoop.conf.Configuration;
 
 /** Names a file or directory in a {@link FileSystem}.
- * Path strings use slash as the directory separator.  A path string is
- * absolute if it begins with a slash.
+ * Path strings use slash as the directory separator.
  */
 @Stringable
 @InterfaceAudience.Public
@@ -312,14 +311,7 @@ public class Path implements Comparable {
     return uri.getPath().startsWith(SEPARATOR, start);
    }
   
-  /** True if the path component of this URI is absolute. */
-  /**
-   * There is some ambiguity here. An absolute path is a slash
-   * relative name without a scheme or an authority.
-   * So either this method was incorrectly named or its
-   * implementation is incorrect. This method returns true
-   * even if there is a scheme and authority.
-   */
+  /** True if the path is not a relative path and starts with root. */
   public boolean isAbsolute() {
      return isUriPathAbsolute();
   }
